Minor refactoring & User update